Remove unknown param for java8